--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+/* import the font from google */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;1,700&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+  z-index: 1;
+}
+.heading{
+  font-size: 45px;
+  font-weight: 700;
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* +++++++++++++++++++ START STYLE INPUT FIELD SECTION +++++++++++++++++++ */
+
+ .input-section{
+  width: 100%;
+ }
+
+ .input-section .form-control-lg{
+  border-radius: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  height: 60px;
+  border: none;
+  outline: none;
+  position: relative;
+  box-shadow: inset 0 0 5px #000;
+  transition: .2s;
+ }
+ .input-section .form-control-lg:focus{
+  outline: none;
+  box-shadow: 0 0 20px 1000px #00000075;
+ }
+
+ .input-section .btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  right: 90px;
+  line-height: 0;
+  font-size: 14px;
+  font-weight: 900;
+  padding: 2px;
+  transform: translateY(10px);
+  transition: .2s;
+  box-shadow: 0 0 15px #000;
+ }
+
+ .input-section .btn:active{
+  transform: scale(.8) translateY(15px);
+  box-shadow: 0 0 7.5px #000;
+  font-size: 13px;
+ }
+
+ .input-section .btn:focus{
+  outline: none;
+ }
+/* +++++++++++++++++++ END STYLE INPUT FIELD SECTION +++++++++++++++++++ */
