--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@
  .input-section{
   width: 100%;
  }
+form.row{
+  position: relative;
+}
 
  .input-section .form-control-lg{
   border-radius: 20px;
@@ -40,10 +43,10 @@
   height: 60px;
   border: none;
   outline: none;
-  position: relative;
   box-shadow: inset 0 0 5px #000;
   transition: .2s;
  }
+
  .input-section .form-control-lg:focus{
   outline: none;
   box-shadow: 0 0 20px 1000px #00000075;
@@ -57,15 +60,13 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  right: 90px;
-  line-height: 0;
+  right: 15px;
   font-size: 14px;
   font-weight: 900;
-  padding: 2px;
   transform: translateY(10px);
   transition: .2s;
   box-shadow: 0 0 15px #000;
- }
+}
 
  .input-section .btn:active{
   transform: scale(.8) translateY(15px);
