--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
 
 .app{
   display: flex;
-  justify-content: center;
   flex-direction: column;
   height: 100vh;
   width: 100vw;
@@ -61,20 +60,57 @@ form.row{
   height: 40px;
   border-radius: 50%;
   right: 15px;
+  border: none;
   font-size: 14px;
   font-weight: 900;
   transform: translateY(10px);
   transition: .2s;
   box-shadow: 0 0 15px #000;
 }
-
- .input-section .btn:active{
+.input-section .btn:focus,
+.input-section .btn:active{
   transform: scale(.8) translateY(15px);
   box-shadow: 0 0 7.5px #000;
   font-size: 13px;
- }
-
- .input-section .btn:focus{
-  outline: none;
- }
+}
 /* +++++++++++++++++++ END STYLE INPUT FIELD SECTION +++++++++++++++++++ */
+
+/* +++++++++++++++++++ START STYLE TASKI LIST SECTION +++++++++++++++++++ */
+
+.taski-list-section{
+  width: 100%;
+}
+.list-header{
+  background-image: url(https://img.freepik.com/free-vector/pink-fabric-texture-background-design-element_548373-1706.jpg?w=740);
+  padding: 15px;
+  border-radius: 15px;
+}
+.list-heading{
+  margin: 0;
+}
+.single-task{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url(https://img.freepik.com/free-photo/abstract-gold-satin-silky-cloth-fabric-textile-drape-with-crease-wavy-folds-background_620624-574.jpg?size=626&ext=jpg&ga=GA1.2.225029581.1656948679);
+  background-size: cover;
+  padding: 10px;
+  border-radius: 10px;
+
+}
+
+.task-actions{
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
+}
+.icon{
+  font-size: 20px;
+  cursor: pointer;
+  opacity: .6;
+  transition: .5s;
+}
+.icon:hover{
+  opacity: 1;
+}
+/* +++++++++++++++++++ END STYLE TASKI LIST SECTION +++++++++++++++++++ */
